--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>THis site was created by Andrew Mead. It uses data from mapbox.com and darkssky.net!</p>
         <img class = "portrait" src="/img/robot.jpg">
     </div>
 
